// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionLink /> with additional className matches its snapshot 1`] = `
<CustomizedNavigationLink
  ariaLabel="Download the file"
  block={true}
  className="y-actionLink TEST_CLASSNAME"
  href="https://yammer.com"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <CustomizedBlock
        push={2}
      >
        <Down
          block={true}
          size="16"
        />
      </CustomizedBlock>
    </FixedGridColumn>
    <FixedGridColumn>
      <CustomizedBlock
        textSize="mediumSub"
      >
        Download
      </CustomizedBlock>
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedNavigationLink>
`;

exports[`<ActionLink /> with compact set to true matches its snapshot 1`] = `
<CustomizedNavigationLink
  ariaLabel="Download the file"
  block={true}
  className="y-actionLink TEST_CLASSNAME"
  href="https://yammer.com"
>
  <FixedGridRow
    gutterSize="xSmall"
  >
    <FixedGridColumn
      fixed={true}
    >
      <CustomizedBlock
        push={2}
      >
        <Down
          block={true}
          size="14"
        />
      </CustomizedBlock>
    </FixedGridColumn>
    <FixedGridColumn>
      <CustomizedBlock
        textSize="mediumSub"
      >
        <Strong>
          Download
        </Strong>
      </CustomizedBlock>
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedNavigationLink>
`;

exports[`<ActionLink /> with href and ariaLabel matches its snapshot 1`] = `
<CustomizedNavigationLink
  ariaLabel="Download file"
  block={true}
  className="y-actionLink"
  href="https://yammer.com"
  newWindow={true}
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <CustomizedBlock
        push={2}
      >
        <Down
          block={true}
          size="16"
        />
      </CustomizedBlock>
    </FixedGridColumn>
    <FixedGridColumn>
      <CustomizedBlock
        textSize="mediumSub"
      >
        Download
      </CustomizedBlock>
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedNavigationLink>
`;

exports[`<ActionLink /> with href matches its snapshot 1`] = `
<CustomizedNavigationLink
  block={true}
  className="y-actionLink"
  href="https://yammer.com"
  newWindow={true}
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <CustomizedBlock
        push={2}
      >
        <Down
          block={true}
          size="16"
        />
      </CustomizedBlock>
    </FixedGridColumn>
    <FixedGridColumn>
      <CustomizedBlock
        textSize="mediumSub"
      >
        Download
      </CustomizedBlock>
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedNavigationLink>
`;

exports[`<ActionLink /> with onClick and ariaLabel matches its snapshot 1`] = `
<CustomizedClickable
  ariaLabel="Download file"
  block={true}
  className="y-actionLink"
  onClick={[MockFunction]}
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <CustomizedBlock
        push={2}
      >
        <Down
          block={true}
          size="16"
        />
      </CustomizedBlock>
    </FixedGridColumn>
    <FixedGridColumn>
      <CustomizedBlock
        textSize="mediumSub"
      >
        Download
      </CustomizedBlock>
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedClickable>
`;

exports[`<ActionLink /> with onClick matches its snapshot 1`] = `
<CustomizedClickable
  block={true}
  className="y-actionLink"
  onClick={[MockFunction]}
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <CustomizedBlock
        push={2}
      >
        <Down
          block={true}
          size="16"
        />
      </CustomizedBlock>
    </FixedGridColumn>
    <FixedGridColumn>
      <CustomizedBlock
        textSize="mediumSub"
      >
        Download
      </CustomizedBlock>
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedClickable>
`;
